--- a/app/public/wp-content/themes/manonemusic/parts/release.html
+++ b/app/public/wp-content/themes/manonemusic/parts/release.html
@@ -1,7 +1,9 @@
-<!-- wp:post-title /-->
+<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
+<main class="wp-block-group mt-32"><!-- wp:post-title /-->
 
-<!-- wp:columns -->
-<div class="wp-block-columns"><!-- wp:column {"width":"25%"} -->
+   <!-- wp:columns -->
+   <div class="wp-block-columns">
+   <!-- wp:column {"width":"25%"} -->
    <div class="wp-block-column" style="flex-basis:25%"><!-- wp:post-featured-image /--></div>
    <!-- /wp:column -->
    
@@ -13,3 +15,6 @@
    <div class="wp-block-column" style="flex-basis:25%"></div>
    <!-- /wp:column --></div>
    <!-- /wp:columns -->
+   
+</main>
+<!-- /wp:group -->
