--- a/app/public/wp-content/themes/manonemusic/parts/header.html
+++ b/app/public/wp-content/themes/manonemusic/parts/header.html
@@ -1,7 +1,7 @@
-<!-- wp:group {"className":"fixed top-0 w-full pt-8 px-8 xl:px-32 z-50","layout":{"type":"constrained"}} -->
-<div class="wp-block-group fixed top-0 w-full pt-8 px-8 xl:px-32 z-50">
-   <!-- wp:group {"className":"flex w-full max-w-wide mx-auto justify-between","layout":{"type":"flex","flexWrap":"nowrap"}} -->
-   <div class="wp-block-group flex w-full max-w-wide mx-auto justify-between">
+<!-- wp:group {"className":"fixed top-0 w-full pt-8 z-50","layout":{"type":"constrained"}} -->
+<div class="wp-block-group fixed top-0 w-full pt-8 z-50">
+   <!-- wp:group {"className":"flex w-full max-w-wide mx-auto px-8 justify-between","layout":{"type":"flex","flexWrap":"nowrap"}} -->
+   <div class="wp-block-group flex w-full max-w-wide mx-auto px-8 justify-between">
       <!-- wp:paragraph -->
       <p><a class="header-link" href="/home">MAN/ONE MUSIC</a></p>
       <!-- /wp:paragraph -->
