project-page: edit settings.json for php

--- a/app/public/wp-content/themes/manonemusic/parts/header.html
+++ b/app/public/wp-content/themes/manonemusic/parts/header.html
@@ -3,7 +3,7 @@
    <!-- wp:group {"className":"flex w-full max-w-wide mx-auto px-8 justify-between","layout":{"type":"flex","flexWrap":"nowrap"}} -->
    <div class="wp-block-group flex w-full max-w-wide mx-auto px-8 justify-between">
       <!-- wp:paragraph -->
-      <p><a class="header-link" href="/home">MAN/ONE MUSIC</a></p>
+      <p><a class="header-link" href="/">MAN/ONE MUSIC</a></p>
       <!-- /wp:paragraph -->
       <!-- wp:navigation {"ref":4,"className":"gap-8","layout":{"type":"flex","justifyContent":"space-between","flexWrap":"nowrap"}} /--></div>
    <!-- /wp:group --></div>
