project-page: improve templates

--- a/app/public/wp-content/themes/manonemusic/parts/header.html
+++ b/app/public/wp-content/themes/manonemusic/parts/header.html
@@ -1,5 +1,5 @@
-<!-- wp:group {"className":"fixed top-0 w-full pt-8 z-50","layout":{"type":"constrained"}} -->
-<div class="wp-block-group fixed top-0 w-full pt-8 z-50">
+<!-- wp:group {"className":"fixed top-0 w-full pt-8 bg-primary z-50","layout":{"type":"constrained"}} -->
+<div class="wp-block-group fixed top-0 w-full pt-8 bg-primary z-50">
    <!-- wp:group {"className":"flex w-full max-w-wide mx-auto px-8 justify-between","layout":{"type":"flex","flexWrap":"nowrap"}} -->
    <div class="wp-block-group flex w-full max-w-wide mx-auto px-8 justify-between">
       <!-- wp:paragraph -->
