project-page: add responsiveness to contact

--- a/app/public/wp-content/themes/manonemusic/parts/header.html
+++ b/app/public/wp-content/themes/manonemusic/parts/header.html
@@ -5,6 +5,6 @@
       <!-- wp:paragraph -->
       <p><a class="header-link" href="/home">MAN/ONE MUSIC</a></p>
       <!-- /wp:paragraph -->
-      <!-- wp:navigation {"ref":4,"className":"gap-8","layout":{"type":"flex","justifyContent":"space-between","flexWrap":"nowrap"}} /--></div>
+      <!-- wp:navigation {"ref":4,"className":"flex-col items-end md:flex-row md:gap-4 lg:gap-8","layout":{"type":"flex","justifyContent":"space-between","flexWrap":"nowrap"}} /--></div>
    <!-- /wp:group --></div>
 <!-- /wp:group -->
